# ReconLab

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run.bat
app/: db.py  duckdb_client.py  engine.py  export.py  models.py  sirene.py  ui_mapping.py  ui_validation.py
tests/: test_basic.py  test_engine.py  test_logic.py  test_sirene_rate_limit.py  test_ui.py  test_ui_validation.py
