[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "nicegui>=3.3.1",
    "pandas>=2.3.3",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
